--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@ title: Akhtar, CV & ML
 <div style="font-family: 'Lato', sans-serif; font-size: 16px; line-height: 1.6; color: #2c3e50;">
     <p>
     Grateful for the opportunity to work with brilliant minds in recent years, including my advisors, collaborators, and students. 
-    Below is a non-exhaustive list of students and early-career collaborators I have had the pleasure of supervising, mentoring, or working alongside.
+    Below is a non-exhaustive list of students and early-career collaborators with whom I have had the privilege to supervise or collaborate, both in the past and currently.
   </p>
 
   <div style="display: flex; flex-wrap: wrap; gap: 40px; margin-top: 30px;">
@@ -462,43 +462,45 @@ title: Akhtar, CV & ML
     <div style="width: 160px; text-align: center;">
       <img src="/image_web/sohail.jpg" alt="Muhammad Sohail Danish" style="width: 100px; height: 100px; object-fit: cover; border-radius: 50%; border: 2px solid #ccc; box-shadow: 0 2px 6px rgba(0,0,0,0.1);">
       <p style="margin: 10px 0 0 0; font-weight: bold; color: #1f78b4;">Muhammad Sohail Danish</p>
-      <p style="font-size: 14px;">Ph.D. student</p>
+      <p style="font-size: 14px;">Ph.D. student at MBZUAI. We are currently collaborating on remote sensing benchmarking and foundation models. 
+	      He has co-authored papers at ICCV (Highlight) and CVPR as part of our joint research efforts.</p>
     </div>
 
     <div style="width: 160px; text-align: center;">
       <img src="/image_web/akashah.jpg" alt="Akashah Shabbir" style="width: 100px; height: 100px; object-fit: cover; border-radius: 50%; border: 2px solid #ccc; box-shadow: 0 2px 6px rgba(0,0,0,0.1);">
       <p style="margin: 10px 0 0 0; font-weight: bold; color: #1f78b4;">Akashah Shabbir</p>
-      <p style="font-size: 14px;">Ph.D. student</p>
+      <p style="font-size: 14px;">Ph.D. student at MBZUAI. Currently collaborating with her on developing an agentic pipeline for remote sensing tasks.</p>
     </div>
 
     <div style="width: 160px; text-align: center;">
-      <img src="/image_web/vishal.jpg" alt="Vishal" style="width: 100px; height: 100px; object-fit: cover; border-radius: 50%; border: 2px solid #ccc; box-shadow: 0 2px 6px rgba(0,0,0,0.1);">
-      <p style="margin: 10px 0 0 0; font-weight: bold; color: #1f78b4;">Vishal</p>
-      <p style="font-size: 14px;">Ph.D. student</p>
+      <img src="/image_web/vishal.jpg" alt="Vishal Nedungadi" style="width: 100px; height: 100px; object-fit: cover; border-radius: 50%; border: 2px solid #ccc; box-shadow: 0 2px 6px rgba(0,0,0,0.1);">
+      <p style="margin: 10px 0 0 0; font-weight: bold; color: #1f78b4;">Vishal Nedungadi</p>
+      <p style="font-size: 14px;">Former researcher at MBZUAI. 
+	      Collaborated with him on air pollution forecasting, which led to a Best Paper award at the ICML TerraBytes workshop. He is now a Ph.D. student at Wageningen University and Research.</p>
     </div>
 
     <div style="width: 160px; text-align: center;">
-      <img src="/image_web/ashshak.jpg" alt="Ashshak" style="width: 100px; height: 100px; object-fit: cover; border-radius: 50%; border: 2px solid #ccc; box-shadow: 0 2px 6px rgba(0,0,0,0.1);">
-      <p style="margin: 10px 0 0 0; font-weight: bold; color: #1f78b4;">Ashshak</p>
-      <p style="font-size: 14px;">Researcher</p>
+      <img src="/image_web/ashshak.jpg" alt="Ashshak Sharifdeen" style="width: 100px; height: 100px; object-fit: cover; border-radius: 50%; border: 2px solid #ccc; box-shadow: 0 2px 6px rgba(0,0,0,0.1);">
+      <p style="margin: 10px 0 0 0; font-weight: bold; color: #1f78b4;">Ashshak Sharifdeen</p>
+      <p style="font-size: 14px;">Researcher at MBZUAI. Currently collaborating with him on model calibration for vision-language models. He co-authored a Highlight paper with us at CVPR.</p>
     </div>
 
     <div style="width: 160px; text-align: center;">
-      <img src="/image_web/yohan.jpg" alt="Yohan" style="width: 100px; height: 100px; object-fit: cover; border-radius: 50%; border: 2px solid #ccc; box-shadow: 0 2px 6px rgba(0,0,0,0.1);">
-      <p style="margin: 10px 0 0 0; font-weight: bold; color: #1f78b4;">Yohan</p>
-      <p style="font-size: 14px;">Researcher</p>
+      <img src="/image_web/yohan.jpg" alt="Yohan Abeysinghe" style="width: 100px; height: 100px; object-fit: cover; border-radius: 50%; border: 2px solid #ccc; box-shadow: 0 2px 6px rgba(0,0,0,0.1);">
+      <p style="margin: 10px 0 0 0; font-weight: bold; color: #1f78b4;">Yohan Abeysinghe</p>
+      <p style="font-size: 14px;">Researcher at MBZUAI. Currently collaborating on air pollution forecasting using a refined modular framework that integrates diffusion mechanisms for climate modeling.</p>
     </div>
 
     <div style="width: 160px; text-align: center;">
       <img src="/image_web/roshaan.jpg" alt="Syed Roshaan Ali Shah" style="width: 100px; height: 100px; object-fit: cover; border-radius: 50%; border: 2px solid #ccc; box-shadow: 0 2px 6px rgba(0,0,0,0.1);">
-      <p style="margin: 10px 0 0 0; font-weight: bold; color: #1f78b4;">Syed Roshaan Ali Shah</p>
-      <p style="font-size: 14px;">M.S. student<br>Co-authored a paper</p>
+      <p style="margin: 10px 0 0 0; font-weight: bold; color: #1f78b4;">Syed Roshaan Ali</p>
+      <p style="font-size: 14px;">Currently collaborating on remote sensing benchmarking and foundation models. He contributed to our ICCV paper, which was accepted as a Highlight.</p>
     </div>
 
     <div style="width: 160px; text-align: center;">
       <img src="/image_web/umer.jpg" alt="Muhammad Umer" style="width: 100px; height: 100px; object-fit: cover; border-radius: 50%; border: 2px solid #ccc; box-shadow: 0 2px 6px rgba(0,0,0,0.1);">
-      <p style="margin: 10px 0 0 0; font-weight: bold; color: #1f78b4;">Muhammad Umer Sheikh</p>
-      <p style="font-size: 14px;">Researcher</p>
+      <p style="margin: 10px 0 0 0; font-weight: bold; color: #1f78b4;">Muhammad Umer</p>
+      <p style="font-size: 14px;">Researcher at MBZUAI. Currently collaborating with him on developing an agentic pipeline for remote sensing tasks.</p>
     </div>
 
   </div>
