--- a/index.html
+++ b/index.html
@@ -380,8 +380,7 @@ title: Akhtar, CV & ML
 <h2 style="font-family: 'Roboto Slab', serif; font-size: 24px; color: #ffffff; margin-bottom: 15px;">People</h2>
 <div style="font-family: 'Lato', sans-serif; font-size: 16px; line-height: 1.6; color: #2c3e50;">
   <p>
-    Grateful for the opportunity to work with brilliant minds in recent years, including my advisors {
-<a href="https://scholar.google.com.pk/citations?user=M59O9lkAAAAJ&hl=en" style="text-decoration: none; color: #1f78b4;">Salman Khan</a> (MBZUAI-UAE, ANU-Australia), 
+    Grateful for the opportunity to work with brilliant minds in recent years, including my advisors {<a href="https://scholar.google.com.pk/citations?user=M59O9lkAAAAJ&hl=en" style="text-decoration: none; color: #1f78b4;">Salman Khan</a> (MBZUAI-UAE, ANU-Australia), 
   <a href="https://scholar.google.com/citations?user=ZgERfFwAAAAJ&hl=en" style="text-decoration: none; color: #1f78b4;">Haris Khan</a> (MBZUAI-UAE), 
   <a href="https://scholar.google.com/citations?user=4YLsmYIAAAAJ&hl=en" style="text-decoration: none; color: #1f78b4;">Saquib Sarfraz</a> (KIT, Mercedes-Germany), 
   <a href="https://scholar.google.com/citations?user=zvaeYnUAAAAJ&hl=en" style="text-decoration: none; color: #1f78b4;">Fahad Khan</a> (MBZUAI-UAE, Linkoping-Sweden), and 
