--- a/index.html
+++ b/index.html
@@ -527,7 +527,7 @@ collaborators, and students. Below is a non-exhaustive list of students and earl
 <a id="cv" class="anchor"></a>
 <h2 style="font-family: 'Roboto Slab', serif; font-size: 24px; color: #ffffff; margin-bottom: 10px;">Curriculum Vitae (CV)</h2>
 <p style="font-family: 'Lato', sans-serif; font-size: 16px; color: #2c3e50; line-height: 1.6; margin-bottom: 15px;">
-    Download CV as PDF: <a href="CV_Akhtar-Jul.pdf" class="download" style="text-decoration: none; color: #3498db;">Download CV</a>
+    Download CV as PDF: <a href="CV_Akhtar.pdf" class="download" style="text-decoration: none; color: #3498db;">Download CV</a>
 </p>
 
 
