--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ title: Akhtar, CV & ML
             <!-- Publication Details -->
             <div style="flex: 1;">
                 <p style="font-family: 'Roboto Slab', serif; font-size: 16px; line-height: 1.8; color: #2c3e50; margin: 0;">
-                    Muhamad Sohail Danish, <b style="color: #1f78b4;">Muhammad Akhtar Munir</b>*, Syed Roshaan Ali Shah, Muhammad Haris Khan, Rao Muhammad Anwer, Jorma Laaksonen, Fahad Shahbaz Khan, Salman Khan.
+                    Muhamad Sohail Danish, <b style="color: #1f78b4;">Muhammad Akhtar Munir</b>, Syed Roshaan Ali Shah, Muhammad Haris Khan, Rao Muhammad Anwer, Jorma Laaksonen, Fahad Shahbaz Khan, Salman Khan.
                 </p>
                 <p style="font-family: 'Roboto Slab', serif; font-size: 16px; color: #2c3e50; margin: 5px 0;">
                     <strong>"TerraFM: A Scalable Foundation Model for Unified Multisensor Earth Observation"</strong>. 
