--- a/index.html
+++ b/index.html
@@ -464,16 +464,16 @@ collaborators, and students. Below is a non-exhaustive list of students and earl
 </ul>
 
     <!-- Experience Section -->
-<a id="experience" class="anchor"></a>
+<!-- <a id="experience" class="anchor"></a>
 <h2 style="font-family: 'Roboto Slab', serif; font-size: 24px; color: #ffffff; margin-bottom: 15px;">Experience</h2>
 <div style="font-family: 'Lato', sans-serif; font-size: 16px; line-height: 1.6; color: #2c3e50;">
     <ul style="list-style-type: disc; padding-left: 20px;">
         <li style="margin-bottom: 15px;">
             <strong>Research Associate</strong>, Mohamed bin Zayed University of Artificial Intelligence (MBZUAI), Abu Dhabi, UAE
             <ul style="list-style-type: none; padding-left: 0; margin-top: 5px;">
-                <li><strong>Duration:</strong> Jul 2023 – Present</li>
+                <li><strong>Duration:</strong> Jul 2023 – Present</li> -->
 <!--                 <li><strong>Association:</strong> Computer Vision Department</li> -->
-                <li><strong>Advisors:</strong> 
+<!--                 <li><strong>Advisors:</strong> 
                     <a href="https://scholar.google.es/citations?user=M59O9lkAAAAJ" style="text-decoration: none; color: #1f78b4;">Dr. Salman Khan</a>, 
                     <a href="https://scholar.google.com/citations?user=zvaeYnUAAAAJ&hl=en" style="text-decoration: none; color: #1f78b4;">Dr. Fahad S Khan</a>
                 </li>
@@ -483,9 +483,9 @@ collaborators, and students. Below is a non-exhaustive list of students and earl
         <li style="margin-bottom: 15px;">
             <strong>Research Intern</strong>, Mohamed bin Zayed University of Artificial Intelligence (MBZUAI), Abu Dhabi, UAE
             <ul style="list-style-type: none; padding-left: 0; margin-top: 5px;">
-                <li><strong>Duration:</strong> Aug 2022 – Jun 2023</li>
+                <li><strong>Duration:</strong> Aug 2022 – Jun 2023</li> -->
 <!--                 <li><strong>Association:</strong> Computer Vision Department</li> -->
-                <li><strong>Advisors:</strong> 
+<!--                 <li><strong>Advisors:</strong> 
                     <a href="https://scholar.google.es/citations?user=M59O9lkAAAAJ" style="text-decoration: none; color: #1f78b4;">Dr. Salman Khan</a>, 
                     <a href="https://scholar.google.com/citations?user=zvaeYnUAAAAJ&hl=en" style="text-decoration: none; color: #1f78b4;">Dr. Fahad S Khan</a>
                 </li>
@@ -501,7 +501,7 @@ collaborators, and students. Below is a non-exhaustive list of students and earl
                 </li>
             </ul>
         </li>
-
+ -->
 <!--         <li style="margin-bottom: 15px;"> -->
 <!--             <strong>Fellowship</strong>, Information Technology University (ITU), Lahore, Pakistan -->
 <!--             <ul style="list-style-type: none; padding-left: 0; margin-top: 5px;"> -->
@@ -513,16 +513,16 @@ collaborators, and students. Below is a non-exhaustive list of students and earl
 <!--             </ul> -->
 <!--         </li> -->
 
-        <li style="margin-bottom: 15px;">
+<!--         <li style="margin-bottom: 15px;">
             <strong>Lab Engineer</strong>, School of EE and CS (SEECS), NUST, Islamabad, Pakistan
             <ul style="list-style-type: none; padding-left: 0; margin-top: 5px;">
                 <li><strong>Duration:</strong> Nov 2013 – Sep 2017</li>
-<!--                 <li><strong>Association:</strong> Department of Computing, SEECS, NUST</li> -->
-            </ul>
+<!--                 <li><strong>Association:</strong> Department of Computing, SEECS, NUST</li> --> -->
+<!--             </ul>
         </li>
     </ul>
 </div>
-
+ -->
 <!-- CV Section -->
 <a id="cv" class="anchor"></a>
 <h2 style="font-family: 'Roboto Slab', serif; font-size: 24px; color: #ffffff; margin-bottom: 10px;">Curriculum Vitae (CV)</h2>
