--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@ collaborators, and students. Below is a non-exhaustive list of students and earl
             <strong>Lab Engineer</strong>, School of EE and CS (SEECS), NUST, Islamabad, Pakistan
             <ul style="list-style-type: none; padding-left: 0; margin-top: 5px;">
                 <li><strong>Duration:</strong> Nov 2013 – Sep 2017</li>
-<!--                 <li><strong>Association:</strong> Department of Computing, SEECS, NUST</li> --> -->
+<!--                 <li><strong>Association:</strong> Department of Computing, SEECS, NUST</li> --> 
 <!--             </ul>
         </li>
     </ul>
