--- a/index.html
+++ b/index.html
@@ -119,6 +119,29 @@ title: Akhtar, CV & ML
         <li style="display: flex; align-items: center; margin-bottom: 30px; font-family: 'Lato', sans-serif; font-size: 16px; line-height: 1.8; color: #2c3e50;">
             <!-- Thumbnail -->
             <div style="flex: 0 0 150px; margin-right: 20px; display: flex; align-items: center;">
+                <img src="ss_syncast.png" alt="syncast Thumbnail" style="width: 100%; height: auto; border-radius: 8px; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);">
+            </div>
+        
+            <!-- Publication Details -->
+            <div style="flex: 1;">
+                <p style="font-family: 'Roboto Slab', serif; font-size: 16px; line-height: 1.8; color: #2c3e50; margin: 0;">
+                    Yohan Abeysinghe, <b style="color: #1f78b4;">Muhammad Akhtar Munir</b>, Sanoojan Baliah, Ron Sarafian, Fahad Shahbaz Khan, Yinon Rudich, Salman Khan.
+                </p>
+                <p style="font-family: 'Roboto Slab', serif; font-size: 16px; color: #2c3e50; margin: 5px 0;">
+                    <strong>"Synergistic Neural Forecasting of Air Pollution with Stochastic Sampling"</strong>. 
+                    <!-- In <strong>arXiv (2025)</strong>.  -->
+                </p>
+                <p style="margin: 5px 0;">
+                    <a href="https://akhtarvision.github.io/" style="font-family: 'Lato', sans-serif; text-decoration: none; color: #3498db;">[Paper (Coming Soon)]</a> 
+                    <a href="https://akhtarvision.github.io/" style="font-family: 'Lato', sans-serif; text-decoration: none; color: #e74c3c;">[Code (Coming Soon)]</a>
+                </p>
+            </div>
+        </li>        
+	    <hr style="border: 0; border-top: 1px solid #d3d3d3; margin: 0 0 30px 0;">
+	<!-- Publication Item 1 -->
+        <li style="display: flex; align-items: center; margin-bottom: 30px; font-family: 'Lato', sans-serif; font-size: 16px; line-height: 1.8; color: #2c3e50;">
+            <!-- Thumbnail -->
+            <div style="flex: 0 0 150px; margin-right: 20px; display: flex; align-items: center;">
                 <img src="thumb_geo.png" alt="GEOBench-VLM Thumbnail" style="width: 100%; height: auto; border-radius: 8px; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);">
             </div>
         
